# QTiSSH

./: .gitignore  README.md  TODO.md  add_server.cpp  add_server.ui  clean_build.sh  main.cpp  qtissh.pro
src/: CMakeLists.txt  add_server.cpp  add_server.h  add_server.ui  filetransfer.cpp  filetransfer.h  filetransfermanager.cpp  filetransfermanager.h  foldermanager.cpp  foldermanager.h  main.cpp  maintabwindow.cpp  maintabwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  serverconfig.cpp  serverconfig.h  servermanager.cpp  servermanager.h  servertreewidget.cpp  servertreewidget.h  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h  sftpbrowser.cpp  sftpbrowser.h  sftpbrowser.ui  sftpconnection.cpp  sftpconnection.h  snippetmanager.cpp  snippetmanager.h  sshterminal.cpp  sshterminal.h  sshterminal.ui  (+12 more)
